--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="humidity">humidity: -- %</div>
         <div class="wind">Wind Speed: -- km/h</div>
       </div>
-      <p style="opacity: .3; padding: 0; margin: 30px 0 0;">(Refresh the page for change the background image)</p>
+      <p style="opacity: .3; padding: 0; margin: 30px 0 0;">(Refresh the page to change the background image)</p>
     </div>
   </div>
 
